# smb2-replay

./: .dockerignore  .flake8  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  INSTALLATION.md  OPTIMIZATION_SUMMARY.md  PERFORMANCE_OPTIMIZATIONS.md  README.md  RELEASE_NOTES_1.0.0.md  USAGE_DIAGRAM.md  activate_env.sh  check_tree_connect_frames.py  debug_create_action.py  docker-compose.smbreplay.yml  format_batch.py  format_file.py  impacket.ipynb  install.py  install_dev_tools.py  mypy.ini  pyproject.toml  requirements-api.txt  requirements.txt  smb2_fields.txt  smb_test.conf  smbreplay.code-workspace  test_environment.py  test_formatted_file.py  test_optimizations.py  test_simple_connectivity.py  test_smb_connectivity.py  validate_optimizations.py
.agentic-tools-mcp/memories/project_context/: SMB2_Replay_v1.0.0_Release_Complete.json
.agentic-tools-mcp/memories/project_management/: SMBReplay_Formatting_Project_Created.json  SMBReplay_Formatting_Tools_Setup_Complete.json  SMBReplay_Python_Files_Inventory_Complete.json
.agentic-tools-mcp/memories/testing/: Test_Fixes_Completed.json
.agentic-tools-mcp/tasks/: tasks.json
.claude/: hookify.ruff-before-commit.local.md
api/: __init__.py  main.py
api/models/: __init__.py  common.py  config.py  replay.py  session.py  trace.py
api/routes/: config.py  health.py  replay.py  sessions.py  traces.py
api/services/: smbreplay_service.py
api/tests/: __init__.py  conftest.py  test_config.py  test_health.py  test_replay.py  test_sessions.py  test_traces.py
docs/: TRACER_INTEGRATION.md  UV_MIGRATION.md  s3-minio.md
scripts/: setup-uv.sh
sdk/: package-lock.json  package.json  tsconfig.json  vitest.config.ts
sdk/src/: client.ts  errors.ts  index.ts
sdk/src/types/: common.ts  config.ts  index.ts  replay.ts  session.ts  trace.ts
sdk/tests/: client.test.ts
sdk/tests/mocks/: handlers.ts
smbreplay_package/: CODE_FORMATTING_INVENTORY.md  MANIFEST.in  README.md  requirements.txt  setup.py
smbreplay_package/smbreplay/: __init__.py  __main__.py  config.py  constants.py  database.py  frame_storage.py  ingestion.py  main.py  performance_monitor.py  replay.py  session_manager.py  test_conversion.py  test_environment.py  tshark_processor.py  utils.py
smbreplay_package/smbreplay.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
smbreplay_package/smbreplay/handlers/: __init__.py  cancel.py  cancel.py.backup  change_notify.py  change_notify.py.backup  close.py  close.py.backup  create.py  create.py.backup  echo.py  echo.py.backup  flush.py  ioctl.py  ioctl.py.backup  lease_break.py  lease_break.py.backup  lock.py  logoff.py  logoff.py.backup  negotiate.py  oplock_break.py  query_directory.py  query_directory.py.backup  query_info.py  query_info.py.backup  read.py  read.py.backup  response.py  response.py.backup  session_setup.py  session_setup.py.backup  set_info.py  tree_connect.py  tree_disconnect.py  write.py  write.py.backup
utils/: check_tree_connect_frames.py  compare_pcap_parquet.py  debug_delete_operation.py  system_status.py  test_impacket_usage.py  test_mock_connectivity.py  test_smb_connectivity.py
utils/analysis/: analyze_client_behavior.py  analyze_response_mismatches.py  analyze_workflow_state.py  check_tree_connect_frames.py  compare_pcap_parquet.py  compare_replay_to_pcap.py  debug_tree_connects.py  setup_workflow_state.py
utils/benchmarks/: benchmark_startup.py  detailed_config_benchmark.py  import_analysis.py  minimal_config_test.py
utils/cleanup/: cleanup_test_files.py  force_cleanup.py
utils/docs/: README.md  SMB_DIRECTORY_CREATION.md  WORKFLOW.md
utils/pcap/: capture_setup_pcap.py
utils/tests/: run_tests.py  test_correct_create_options.py  test_correct_dispositions.py  test_directory_behaviors.py  test_directory_creation.py  test_directory_dispositions.py  test_directory_listing.py  test_directory_vs_file.py  test_fresh_state.py  test_ingestion.py  test_ingestion_unit.py  test_no_encryption.py  test_ping_functionality.py  test_pre_trace_state.py  test_query_directory.py  test_replay_connection.py  test_response_validation.py  test_setup_with_pcap.py  test_simple_directory.py  test_smb_connectivity.py  test_tshark_processor.py  test_utils.py
